--- a/load.html
+++ b/load.html
@@ -2,21 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="referrer" content="no-referrer" />
-    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" id="tab-favicon" href="/favicon.png" />
-    <title id="tab-title">Home</title>
-    <link rel="stylesheet" href="/assets/css/global.css?v=6" />
-    <link rel="stylesheet" href="/assets/css/error.css?v=2" />
-    <link rel="stylesheet" href="/assets/css/nav.css?v=2" />
+    <title id="tab-title">Loading Proxy...</title>
   </head>
   <body>
     <div class="main error">
-      <h1>You may now close this tab.</h1>
-      <p>Why did this tab spawn? 
+      <h1>Attempting to close tab</h1>
+      <p>Why did this tab open? 
 
-        This tab is to load all of the nessacary content that is required to run a proxy. The site that was opened requires certain recorces to be loaded to ensure it works properly.
+        This tab is to load all of the nessacary content that is required to run a proxy. The site that was opened requires certain recorces to be loaded to ensure it works properly. If the tab isnt closing, you may manually close it.
       </p>
       
       <script>
