--- a/load.html
+++ b/load.html
@@ -7,7 +7,7 @@
     <title id="tab-title">Loading Proxy...</title>
   </head>
   <body>
-    <div class="main error">
+    <div class="info">
       <h1>Attempting to close tab</h1>
       <p>Why did this tab open? 
 
